--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.2"
+  },
+  "dependencies": {
+    "winston": "^3.3.3"
   }
 }
